--- a/OutOfRed/app/src/main/res/drawable/gradiente_background.xml
+++ b/OutOfRed/app/src/main/res/drawable/gradiente_background.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
 
     <gradient
-        android:endColor="@color/green"
-        android:startColor="@color/white"
-        android:angle="270"/>
+        android:endColor="@color/darkRed"
+        android:startColor="@color/darkerRed"
+        android:angle="135"/>
 
 </shape>
