--- a/OutOfRed/app/src/main/res/values/colors.xml
+++ b/OutOfRed/app/src/main/res/values/colors.xml
@@ -6,4 +6,10 @@
     <color name="green">#3CB371</color>
     <color name="white">#FFF</color>
     <color name="darkGreen">#2E8B57</color>
+    <color name="red">#90e55c52</color>
+    <color name="darkRed">#b7433a</color>
+    <color name="darkerRed">#f96b6b</color>
+    <color name="transparent">#12e55c52</color>
+    <color name="pinkShock">#af0e56</color>
+
 </resources>
