--- a/OutOfRed/app/src/main/res/layout/activity_login.xml
+++ b/OutOfRed/app/src/main/res/layout/activity_login.xml
@@ -18,19 +18,28 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Deal"
-        android:textSize="40dp"
-        android:gravity="center"
-        android:layout_margin="40dp"
-        android:textColor="@color/white"
         />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="40dp"
+            >
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/deal_icon_white"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Deal!"
+                android:textSize="50dp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                />
+        </LinearLayout>
 
     <EditText
         android:id="@+id/login_cpf"
