--- a/OutOfRed/app/src/main/res/layout/activity_main.xml
+++ b/OutOfRed/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,17 @@
     android:layout_height="match_parent"
     tools:context="outofred.com.br.outofred.LoginActivity"
     android:orientation="vertical"
+    android:background="@drawable/gradiente_background"
     >
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Deal"
+        android:text="Deal!"
         android:textSize="40dp"
         android:gravity="center"
         android:layout_margin="30dp"
+        android:textColor="@color/white"
         />
 
     <RelativeLayout
@@ -28,6 +30,7 @@
             android:text="CPF: "
             android:textStyle="bold"
             android:layout_marginLeft="20dp"
+            android:textColor="@color/white"
             />
         <TextView
             android:id="@+id/main_cpf_number"
@@ -35,6 +38,7 @@
             android:layout_height="wrap_content"
             android:text="765.345.357-74"
             android:layout_toRightOf="@+id/main_cpf_text"
+            android:textColor="@color/white"
             />
 
         <TextView
@@ -45,6 +49,7 @@
             android:layout_toRightOf="@+id/main_cpf_number"
             android:layout_marginLeft="20dp"
             android:textStyle="bold"
+            android:textColor="@color/white"
             />
         <TextView
             android:id="@+id/main_bday_date"
@@ -52,6 +57,7 @@
             android:layout_height="wrap_content"
             android:text="03/06/1987"
             android:layout_toRightOf="@+id/main_bday_text"
+            android:textColor="@color/white"
             />
 
     </RelativeLayout>
@@ -61,6 +67,7 @@
         android:layout_height="wrap_content"
         android:hint="Data de vencimento da dívida"
         android:layout_margin="20dp"
+        android:textColor="@color/white"
         />
 
     <EditText
@@ -69,6 +76,7 @@
         android:hint="Valor da dívida"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:textColor="@color/white"
         />
 
     <Button
@@ -77,8 +85,8 @@
         android:layout_height="wrap_content"
         android:text="Simular"
         android:layout_margin="20dp"
-        android:background="@color/darkGreen"
-        android:textColor="@color/white"
+        android:background="@drawable/button_red"
+        android:textColor="@color/darkerRed"
         android:textStyle="bold"
         />
 
