--- a/OutOfRed/app/src/main/res/layout/activity_main.xml
+++ b/OutOfRed/app/src/main/res/layout/activity_main.xml
@@ -119,7 +119,7 @@
         android:textSize="18dp"
         android:gravity="center_vertical"
         android:background="@drawable/edit_text_layout"
-        android:hint="Valor do desconto"
+        android:hint="Total a pagar"
         android:textColorHint="@color/white"
         />
     <RelativeLayout
