--- a/OutOfRed/app/src/main/res/layout/activity_main.xml
+++ b/OutOfRed/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:id="@+id/main_bday_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nascimento: "
+            android:text="@string/birth"
             android:layout_toRightOf="@+id/main_cpf_number"
             android:layout_marginLeft="20dp"
             android:textStyle="bold"
@@ -74,7 +74,7 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:background="@drawable/edit_text_layout"
-        android:hint="Data de vencimento da dívida"
+        android:hint="@string/data_vencimento"
         />
 
     <EditText
@@ -85,7 +85,7 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:background="@drawable/edit_text_layout"
-        android:hint="Valor da dívida"
+        android:hint="@string/valor_divida"
         />
 
     <RelativeLayout
@@ -119,7 +119,7 @@
         android:textSize="18dp"
         android:gravity="center_vertical"
         android:background="@drawable/edit_text_layout"
-        android:hint="Total a pagar"
+        android:hint="@string/amount_to_pay"
         android:textColorHint="@color/white"
         />
     <RelativeLayout
@@ -132,7 +132,7 @@
         android:id="@+id/main_button_simular"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="Simular"
+        android:text="@string/simular"
         android:background="@drawable/button_transp"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -142,7 +142,7 @@
             android:id="@+id/main_button_pagar"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Pagar"
+            android:text="@string/pay"
             android:layout_alignParentRight="true"
             android:background="@drawable/button_red"
             android:textColor="@color/darkerRed"
