Inicio da integracao com json

--- a/OutOfRed/app/src/main/res/layout/activity_login.xml
+++ b/OutOfRed/app/src/main/res/layout/activity_login.xml
@@ -66,6 +66,7 @@
         android:background="@drawable/button_red"
         android:textColor="@color/darkerRed"
         android:textStyle="bold"
+        android:onClick="buscar"
         />
     </LinearLayout>
 
